Table users {
    user_id INTEGER [primary key]
    profile_name TEXT [NOT NULL]
}

Table uploads {
    upload_id INTEGER [primary key]
    user_id INTEGER [NOT NULL]
    file_name TEXT [NOT NULL]
    file_ext TEXT [NOT NULL]
    saved_path TEXT [NOT NULL]
}

Table meetups {
    meetup_id INTEGER [primary key]
    organizer_user_id INTEGER [NOT NULL]
    restaurant_name TEXT [NOT NULL]
    meetup_time TEXT [NOT NULL]
    photo_url TEXT [NOT NULL]
    organizer_gender TEXT [NOT NULL]
    participant_gender_preference TEXT [NOT NULL]
    total_seats INTEGER [NOT NULL]
    payment_mode TEXT [NOT NULL]
    notes TEXT [NOT NULL]
    safety_acknowledged INTEGER [NOT NULL]
    created_at TEXT [NOT NULL]
}

Table meetup_participants {
    meetup_participant_id INTEGER [primary key]
    meetup_id INTEGER [NOT NULL]
    user_id INTEGER [NOT NULL]
    joined_at TEXT [NOT NULL]
}

ref: uploads.user_id > users.user_id
ref: meetups.organizer_user_id > users.user_id
ref: meetup_participants.meetup_id > meetups.meetup_id
ref: meetup_participants.user_id > users.user_id
